tests/__snapshots__/directive-ts-expect-error-single-line-indents-stderr.snap.txt
Error: The diagnostic message did not match.

  1 |   // @ts-expect-error Should handle leading spaces
    |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  2 |   console.log(spaces);
  3 | 
  4 |  // @ts-expect-error Should handle leading tabs

      at ./__typetests__/sample.tst.ts:1:23

    The suppressed error:

    Cannot find name 'spaces'. ts(2304)

      1 |   // @ts-expect-error Should handle leading spaces
      2 |   console.log(spaces);
        |               ~~~~~~
      3 | 
      4 |  // @ts-expect-error Should handle leading tabs
      5 |  console.log(tabs);

          at ./__typetests__/sample.tst.ts:2:15

Error: The diagnostic message did not match.

  2 |   console.log(spaces);
  3 | 
  4 |  // @ts-expect-error Should handle leading tabs
    |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~
  5 |  console.log(tabs);
  6 | 

      at ./__typetests__/sample.tst.ts:4:22

    The suppressed error:

    Cannot find name 'tabs'. ts(2304)

      3 | 
      4 |  // @ts-expect-error Should handle leading tabs
      5 |  console.log(tabs);
        |              ~~~~
      6 | 

          at ./__typetests__/sample.tst.ts:5:14

